--- a/index.html
+++ b/index.html
@@ -11,67 +11,28 @@
 <body>
 <div class="wrapper">
     <div class="header container">
-        <div class="header-logo"><a href="#">ЭкоДом</a></div>
+        <div class="header-logo">
+            <a href="#">ЭкоДом</a>
+        </div>
         <nav class="header-nav">
-            <ul>
-                <li class="header-nav_item"><a href="#">O компании</a></li>
-                <li class="header-nav_item"><a href="#">Строительство домов</a></li>
-                <li class="header-nav_item"><a href="#">Работы</a></li>
-                <li class="header-nav_item"><a href="#">Контакты</a></li>
-            </ul>
+            <a class="header-nav__link" href="#">O компании</a>
+            <a class="header-nav__link" href="#">Строительство домов</a>
+            <a class="header-nav__link" href="#">Работы</a>
+            <a class="header-nav__link" href="#">Контакты</a>
         </nav>
-    </div>
-<!--    HERO SECTION    -->
-    <section class="hero">
-        <div class="hero-body container">
-            <div class="hero-description">
-                <h5 class="hero-description_subtitle">Свобода. Доступность. Уникальность.</h5>
-                <h1 class="hero-description_title">Построй дом своей мечты</h1>
-                <h3 class="hero-description_under">Мы построим тот дом, о котором вы мечтаете</h3>
-                <button class="hero-button">
-                    <a href="#"><img src="./src/image/svg/arrow-right.svg" alt="play" class="play"></a>
-                    <a href="#"><span>Построй свой дом</span></a>
-                </button>
+        <div class="header-text">
+            <span>Свобода. Доступность. Уникальность.</span>
+            <h1 class="header-title">Построй дом своей мечты</h1>
+            <h3 class="header-subtitle">Мы построем тот дом, о котором вы мечтаете</h3>
+            <div class="header-button">
+                <a href="#"><img src="./src/image/svg/arrow-right.svg" alt="play" class="play"></a>
+                <a href="#" class="button">Построй свой дом</a>
             </div>
+        </div>
+        <div class="header-circle">
             <img class="hero-circle" src="src/image/svg/circle.svg">
         </div>
-    </section>
-
-<!--    ABOUT SECTION    -->
-
-    <section class="about">
-
-<!--        SLIDER       -->
-
-        <div class="about-body container">
-            <div class="about-body_label">ЭкоДом</div>
-            <div class="about-body_links">
-                <ul>
-                    <li class="link"><a href="#">О компании</a></li>
-                    <li class="link"><a href="#">Руководство</a></li>
-                    <li class="link"><a href="#">Почему мы?</a></li>
-                </ul>
-            </div>
-            <div class="about-body_description">
-                <div class="description-title">Липецкая компания "ЭкоДом"</div>
-                <div class="description-content">
-                    <div class="description-content_video">
-                        <img src="src/image/video/about-video.png">
-                    </div>
-                    <div class="description-content_subtitle">
-                        <p>В зависимости от пожеланий клиентов, мы можем построить дом любой сложности как по уже готовым,
-                            так и по индивидуальным проектам, разработку которых наши специалисты также предоставляют.
-                        </p>
-                        <p>
-                            работает в сфере строительства уже более 13 лет. На данный момент более 500 семей стали обладателями
-                            собственных домов благодаря нашей компании. За это время у нас накопился значительный опыт в работе
-                            эффективного и надежного строительства домов, что вызывает доверие у наших текущих и будущих клиентов.
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+    </div>
 </div>
 </body>
 </html>
