--- a/index.html
+++ b/index.html
@@ -34,5 +34,40 @@
         </div>
     </div>
 </div>
+<!--    ABOUT SECTION    -->
+
+<section class="about">
+
+    <!--        SLIDER       -->
+
+    <div class="about-body container">
+        <span class="about-body__label">ЭкоДом</span>
+        <div class="about-body__links">
+            <ul>
+                <li class="link"><a href="#">О компании</a></li>
+                <li class="link"><a href="#">Руководство</a></li>
+                <li class="link"><a href="#">Почему мы?</a></li>
+            </ul>
+        </div>
+        <div class="about-body__description">
+            <div class="description-title">Липецкая компания "ЭкоДом"</div>
+            <div class="description-content">
+                <div class="description-content__video">
+                    <img src="src/image/video/about-video.png">
+                </div>
+                <div class="description-content__subtitle">
+                    <p>В зависимости от пожеланий клиентов, мы можем построить дом любой сложности как по уже готовым,
+                        так и по индивидуальным проектам, разработку которых наши специалисты также предоставляют.
+                    </p>
+                    <p>
+                        работает в сфере строительства уже более 13 лет. На данный момент более 500 семей стали обладателями
+                        собственных домов благодаря нашей компании. За это время у нас накопился значительный опыт в работе
+                        эффективного и надежного строительства домов, что вызывает доверие у наших текущих и будущих клиентов.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 </body>
 </html>
