done: Opacity slider in about block

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <a href="#">ЭкоДом</a>
         </div>
         <nav class="header-nav">
-            <a class="header-nav__link" href="#">O компании</a>
+            <a class="header-nav__link" href="#first-slide">O компании</a>
             <a class="header-nav__link" href="#">Строительство домов</a>
             <a class="header-nav__link" href="#">Работы</a>
             <a class="header-nav__link" href="#">Контакты</a>
@@ -76,12 +76,15 @@
             </div>
 
             <div class="description-content">
-                <div class="description-title">Здравствуйте, меня зовут Евгений Халипа</div>
-                <div class="description-content__subtitle">
-                    <p>В зависимости от пожеланий клиентов, мы можем построить дом любой сложности как по уже готовым,
-                        так и по индивидуальным проектам, разработку которых наши специалисты также предоставляют.
-                    </p>
+                <div class="description-title__author">
+                    <span>Здравствуйте, меня зовут Евгений Халипа</span>
+                    <div class="description-content__subtitle">
+                        <p>В зависимости от пожеланий клиентов, мы можем построить дом любой сложности как по уже готовым,
+                            так и по индивидуальным проектам, разработку которых наши специалисты также предоставляют.
+                        </p>
+                    </div>
                 </div>
+
             </div>
         </div>
 
