fix: about Perfect Pixel first tab

--- a/index.html
+++ b/index.html
@@ -62,11 +62,45 @@
             </div>
         </div>
     </header>
+    <section class="about">
+<!--        <div class="container">-->
+            <span class="about-label">ЭкоДом</span>
+            <div class="about-tabs">
+                <ul>
+                    <li class="about-tabs__tab active"><a href="#">О компании</a></li>
+                    <li class="about-tabs__tab"><a href="#">Руководство</a></li>
+                    <li class="about-tabs__tab"><a href="#">Почему мы?</a></li>
+                </ul>
+            </div>
+            <div class="about-content">
+                <div class="about-content__title">Липецкая компания "ЭкоДом"</div>
+                <div class="about-content__description">
+                    <img src="src/image/video/video.png">
+                    <p>В зависимости от пожеланий клиентов, мы можем построить дом любой сложности как по уже готовым,
+                        так и по индивидуальным проектам, разработку которых наши специалисты также предоставляют.
+                    </p>
+                    <p>
+                        работает в сфере строительства уже более 13 лет. На данный момент более 500 семей стали
+                        обладателями
+                        собственных домов благодаря нашей компании. За это время у нас накопился значительный опыт в
+                        работе
+                        эффективного и надежного строительства домов, что вызывает доверие у наших текущих и будущих
+                        клиентов.
+                    </p>
+                </div>
+<!--                <div class="about-content__description">-->
+<!--                    -->
+<!--                </div>-->
+            </div>
+<!--        </div>-->
+
+    </section>
 </div>
 
 
 
 <!--    ABOUT SECTION    -->
+
 
 <!--<section class="about" id="about">-->
 
