crunch: background about

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <a href="#">ЭкоДом</a>
                 </div>
                 <nav class="header-top__nav">
-                    <a class="header-top__nav-link" href="#first-slide">O компании</a>
+                    <a class="header-top__nav-link" href="#">O компании</a>
                     <a class="header-top__nav-link" href="#">Строительство домов</a>
                     <a class="header-top__nav-link" href="#">Работы</a>
                     <a class="header-top__nav-link" href="#">Контакты</a>
@@ -35,7 +35,7 @@
                 </div>
                 <div class="header-content__circle">
                     <div class="header-content__circle-arrow">
-                        <img src="src/image/svg/header-arrow.svg">
+                        <img src="src/image/svg/header-arrow.svg" alt="bottom arrow">
                     </div>
                     <svg xmlns="http://www.w3.org/2000/svg"
                          xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -63,37 +63,31 @@
         </div>
     </header>
     <section class="about">
-<!--        <div class="container">-->
-            <span class="about-label">ЭкоДом</span>
-            <div class="about-tabs">
-                <ul>
-                    <li class="about-tabs__tab active"><a href="#">О компании</a></li>
-                    <li class="about-tabs__tab"><a href="#">Руководство</a></li>
-                    <li class="about-tabs__tab"><a href="#">Почему мы?</a></li>
-                </ul>
+        <span class="about-label">ЭкоДом</span>
+        <div class="about-tabs">
+            <ul>
+                <li class="about-tabs__tab active"><a href="#">О компании</a></li>
+                <li class="about-tabs__tab"><a href="#">Руководство</a></li>
+                <li class="about-tabs__tab"><a href="#">Почему мы?</a></li>
+            </ul>
+        </div>
+        <div class="about-content">
+            <div class="about-content__title">Липецкая компания "ЭкоДом"</div>
+            <div class="about-content__description">
+                <img src="src/image/video/video.png" alt="video house">
+                <p>В зависимости от пожеланий клиентов, мы можем построить дом любой сложности как по уже готовым,
+                    так и по индивидуальным проектам, разработку которых наши специалисты также предоставляют.
+                </p>
+                <p>
+                    работает в сфере строительства уже более 13 лет. На данный момент более 500 семей стали
+                    обладателями
+                    собственных домов благодаря нашей компании. За это время у нас накопился значительный опыт в
+                    работе
+                    эффективного и надежного строительства домов, что вызывает доверие у наших текущих и будущих
+                    клиентов.
+                </p>
             </div>
-            <div class="about-content">
-                <div class="about-content__title">Липецкая компания "ЭкоДом"</div>
-                <div class="about-content__description">
-                    <img src="src/image/video/video.png">
-                    <p>В зависимости от пожеланий клиентов, мы можем построить дом любой сложности как по уже готовым,
-                        так и по индивидуальным проектам, разработку которых наши специалисты также предоставляют.
-                    </p>
-                    <p>
-                        работает в сфере строительства уже более 13 лет. На данный момент более 500 семей стали
-                        обладателями
-                        собственных домов благодаря нашей компании. За это время у нас накопился значительный опыт в
-                        работе
-                        эффективного и надежного строительства домов, что вызывает доверие у наших текущих и будущих
-                        клиентов.
-                    </p>
-                </div>
-<!--                <div class="about-content__description">-->
-<!--                    -->
-<!--                </div>-->
-            </div>
-<!--        </div>-->
-
+        </div>
     </section>
 </div>
 
