add: about tabs 2,3

--- a/index.html
+++ b/index.html
@@ -66,15 +66,15 @@
         <span class="about-label">ЭкоДом</span>
         <div class="about-tabs">
             <ul>
-                <li class="about-tabs__tab active"><a href="#">О компании</a></li>
-                <li class="about-tabs__tab"><a href="#">Руководство</a></li>
-                <li class="about-tabs__tab"><a href="#">Почему мы?</a></li>
+                <li class="about-tabs__tab" data-id="1"><a href="#">О компании</a></li>
+                <li class="about-tabs__tab" data-id="2"><a href="#">Руководство</a></li>
+                <li class="about-tabs__tab" data-id="3"><a href="#">Почему мы?</a></li>
             </ul>
         </div>
         <div class="about-content">
-            <div class="about-content__title">Липецкая компания "ЭкоДом"</div>
-            <div class="about-content__description">
-                <img src="src/image/video/video.png" alt="video house">
+            <div class="about-content__about-title">Липецкая компания "ЭкоДом"</div>
+            <div class="about-content__about-description">
+                <img class="about-content__about-video" src="src/image/video/video.png" alt="video house">
                 <p>В зависимости от пожеланий клиентов, мы можем построить дом любой сложности как по уже готовым,
                     так и по индивидуальным проектам, разработку которых наши специалисты также предоставляют.
                 </p>
@@ -88,9 +88,29 @@
                 </p>
             </div>
         </div>
+        <div class="about-content">
+            <img class="about-content__author-photo" src="src/image/author/Evgeny.png" alt="author">
+            <div class="about-content__author-description">
+                <div class="about-content__author-title">Здравствуйте, меня зовут Евгений Халипа</div>
+                <p>Я, как руководитель отдела, гарантирую вам, что ваш дом будет построен качественно, в срок.
+                </p>
+            </div>
+        </div>
+                <div class="about-content active">
+                    <div class="about-content__why-description">
+                        <img class="about-content__why-photo" src="src/image/author/why.png" alt="why us?">
+                        <ul>
+                            <li>Отработаны процессы и накоплен огромный опыт.</li>
+                            <li>Строим под ключ: от геоизысканий участка до ландшафтных работ.</li>
+                            <li>Благодаря комплексному подходу с нами спокойно.</li>
+                            <li>Мы всегда дорабатываем проект дома под выбранный участок и потребности каждого из будущих жильцов.</li>
+                            <li>Строгое соблюдение ГОСТ, СНиП.</li>
+                            <li>Полный цикл — от лесозаготовки до готового дома под ключ.</li>
+                        </ul>
+                    </div>
+                </div>
     </section>
 </div>
-
 
 
 <!--    ABOUT SECTION    -->
