--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
         <span class="about-label">ЭкоДом</span>
         <div class="about-tabs">
             <ul>
-                <li class="about-tabs__tab" data-id="1"><a href="#">О компании</a></li>
-                <li class="about-tabs__tab" data-id="2"><a href="#">Руководство</a></li>
-                <li class="about-tabs__tab" data-id="3"><a href="#">Почему мы?</a></li>
+                <li class="about-tabs__tab active" data-id="1">О компании</li>
+                <li class="about-tabs__tab" data-id="2">Руководство</li>
+                <li class="about-tabs__tab" data-id="3">Почему мы?</li>
             </ul>
         </div>
-        <div class="about-content">
+        <div class="about-content active">
             <div class="about-content__about-title">Липецкая компания "ЭкоДом"</div>
             <div class="about-content__about-description">
                 <img class="about-content__about-video" src="src/image/video/video.png" alt="video house">
@@ -96,7 +96,7 @@
                 </p>
             </div>
         </div>
-                <div class="about-content active">
+                <div class="about-content">
                     <div class="about-content__why-description">
                         <img class="about-content__why-photo" src="src/image/author/why.png" alt="why us?">
                         <ul>
@@ -110,90 +110,39 @@
                     </div>
                 </div>
     </section>
+    <!--    ADVANTAGES SECTION    -->
+    <section class="advantages">
+        <div class="container">
+        <div class="advantages__title"></div>
+        <div class="advantages__items">
+            <div class="advantages-item">
+                <div class="advantages-item__image"></div>
+                <div class="advantages-item__description"></div>
+            </div>
+            <div class="advantages-item">
+                <div class="advantages-item__image"></div>
+                <div class="advantages-item__description"></div>
+            </div>
+            <div class="advantages-item">
+                <div class="advantages-item__image"></div>
+                <div class="advantages-item__description"></div>
+            </div>
+            <div class="advantages-item">
+                <div class="advantages-item__image"></div>
+                <div class="advantages-item__description"></div>
+            </div>
+            <div class="advantages-item">
+                <div class="advantages-item__image"></div>
+                <div class="advantages-item__description"></div>
+            </div>
+
+        </div>
+        </div>
+    </section>
 </div>
 
 
-<!--    ABOUT SECTION    -->
 
-
-<!--<section class="about" id="about">-->
-
-<!--    &lt;!&ndash;        SLIDER       &ndash;&gt;-->
-
-<!--    <div class="about-body container">-->
-<!--        <span class="about-body__label">ЭкоДом</span>-->
-<!--        <div class="about-body__links" >-->
-<!--            <ul>-->
-<!--                <li><a class="link active" href="#first-slide">О компании</a></li>-->
-<!--                <li><a class="link" href="#second-slide">Руководство</a></li>-->
-<!--                <li><a class="link" href="#third-slide">Почему мы?</a></li>-->
-<!--            </ul>-->
-<!--        </div>-->
-<!--        <div class="about-body__description" id="first-slide">-->
-<!--            <div class="description-title">Липецкая компания "ЭкоДом"</div>-->
-<!--            <div class="description-content">-->
-<!--                <div class="description-content__video">-->
-<!--                    <img src="src/image/video/about-video.png">-->
-<!--                </div>-->
-<!--                <div class="description-content__subtitle">-->
-<!--                    <p>В зависимости от пожеланий клиентов, мы можем построить дом любой сложности как по уже готовым,-->
-<!--                        так и по индивидуальным проектам, разработку которых наши специалисты также предоставляют.-->
-<!--                    </p>-->
-<!--                    <p>-->
-<!--                        работает в сфере строительства уже более 13 лет. На данный момент более 500 семей стали обладателями-->
-<!--                        собственных домов благодаря нашей компании. За это время у нас накопился значительный опыт в работе-->
-<!--                        эффективного и надежного строительства домов, что вызывает доверие у наших текущих и будущих клиентов.-->
-<!--                    </p>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
-
-
-
-<!--        <div class="about-body__author" id="second-slide">-->
-<!--            <div class="description-content__author">-->
-<!--                <img src="src/image/author/Evgeny.png">-->
-<!--            </div>-->
-
-<!--            <div class="description-content">-->
-<!--                <div class="description-title__author">-->
-<!--                    <span>Здравствуйте, меня зовут Евгений Халипа</span>-->
-<!--                    <div class="description-content__subtitle">-->
-<!--                        <p>В зависимости от пожеланий клиентов, мы можем построить дом любой сложности как по уже готовым,-->
-<!--                            так и по индивидуальным проектам, разработку которых наши специалисты также предоставляют.-->
-<!--                        </p>-->
-<!--                    </div>-->
-<!--                </div>-->
-
-<!--            </div>-->
-<!--        </div>-->
-
-
-
-
-
-<!--        <div class="about-body__why" id="third-slide">-->
-<!--            <div class="description-content__why">-->
-<!--                <div class="description-content__why">-->
-<!--                    <img src="src/image/author/why.png">-->
-<!--                </div>-->
-<!--                <div class="description-content__subtitle">-->
-<!--                    <ul class="description-content__ul">-->
-<!--                        <li>Отработаны процессы и накоплен огромный опыт.</li>-->
-<!--                        <li>Строим под ключ: от гео-изысканий участка до ландшафтных работ.</li>-->
-<!--                        <li>Благодаря комплексному подходу с нами спокойно.</li>-->
-<!--                        <li>Мы всегда дорабатываем проект дома под выбранный участок и потребности каждого из будущих-->
-<!--                            жильцов.-->
-<!--                        </li>-->
-<!--                        <li>Строгое соблюдение ГОСТ, СНиП.</li>-->
-<!--                        <li>Полный цикл — от лесозаготовки до готового дома под ключ.</li>-->
-<!--                    </ul>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
-
-<!--    </div>-->
-<!--</section>-->
 <script src="js/main.js"></script>
 </body>
 </html>
