add: images and description

--- a/index.html
+++ b/index.html
@@ -113,29 +113,38 @@
     <!--    ADVANTAGES SECTION    -->
     <section class="advantages">
         <div class="container">
-        <div class="advantages__title"></div>
+        <h2 class="advantages__title">Почему покупка дома - выгодней, чем покупка квартиры?</h2>
         <div class="advantages__items">
             <div class="advantages-item">
-                <div class="advantages-item__image"></div>
-                <div class="advantages-item__description"></div>
+                <div class="advantages-item__image">
+                    <img src="src/image/advantages/1.svg" alt="Индивидуальный проект">
+                </div>
+                <div class="advantages-item__description">Индивидуальный проект</div>
             </div>
             <div class="advantages-item">
-                <div class="advantages-item__image"></div>
-                <div class="advantages-item__description"></div>
+                <div class="advantages-item__image">
+                    <img src="src/image/advantages/2.svg" alt="Фиксированная стоимость строительства">
+                </div>
+                <div class="advantages-item__description">Фиксированная стоимость строительства</div>
             </div>
             <div class="advantages-item">
-                <div class="advantages-item__image"></div>
-                <div class="advantages-item__description"></div>
+                <div class="advantages-item__image">
+                    <img src="src/image/advantages/3.svg" alt="Комплектация домов с коммуникациями">
+                </div>
+                <div class="advantages-item__description">Комплектация домов с коммуникациями</div>
             </div>
             <div class="advantages-item">
-                <div class="advantages-item__image"></div>
-                <div class="advantages-item__description"></div>
+                <div class="advantages-item__image">
+                    <img src="src/image/advantages/4.svg" alt="Государственные программы">
+                </div>
+                <div class="advantages-item__description">Государственные программы</div>
             </div>
             <div class="advantages-item">
-                <div class="advantages-item__image"></div>
-                <div class="advantages-item__description"></div>
+                <div class="advantages-item__image">
+                    <img src="src/image/advantages/5.svg" alt="Гарантия на дом 5 лет, на кровлю 7 лет">
+                </div>
+                <div class="advantages-item__description">Гарантия на дом 5 лет, на кровлю 7 лет</div>
             </div>
-
         </div>
         </div>
     </section>
