add: Projects section with one slide

--- a/index.html
+++ b/index.html
@@ -119,33 +119,79 @@
                 <div class="advantages-item__image">
                     <img src="src/image/advantages/1.svg" alt="Индивидуальный проект">
                 </div>
-                <div class="advantages-item__description">Индивидуальный проект</div>
+                <p class="advantages-item__description">Индивидуальный проект</p>
             </div>
             <div class="advantages-item">
                 <div class="advantages-item__image">
                     <img src="src/image/advantages/2.svg" alt="Фиксированная стоимость строительства">
                 </div>
-                <div class="advantages-item__description">Фиксированная стоимость строительства</div>
+                <p class="advantages-item__description">Фиксированная стоимость строительства</p>
             </div>
             <div class="advantages-item">
                 <div class="advantages-item__image">
                     <img src="src/image/advantages/3.svg" alt="Комплектация домов с коммуникациями">
                 </div>
-                <div class="advantages-item__description">Комплектация домов с коммуникациями</div>
+                <p class="advantages-item__description">Комплектация домов с коммуникациями</p>
             </div>
             <div class="advantages-item">
                 <div class="advantages-item__image">
                     <img src="src/image/advantages/4.svg" alt="Государственные программы">
                 </div>
-                <div class="advantages-item__description">Государственные программы</div>
+                <p class="advantages-item__description">Государственные программы</p>
             </div>
             <div class="advantages-item">
                 <div class="advantages-item__image">
                     <img src="src/image/advantages/5.svg" alt="Гарантия на дом 5 лет, на кровлю 7 лет">
                 </div>
-                <div class="advantages-item__description">Гарантия на дом 5 лет, на кровлю 7 лет</div>
+                <p class="advantages-item__description">Гарантия на дом 5 лет, на кровлю 7 лет</p>
             </div>
         </div>
+        </div>
+    </section>
+    <!--    PROJECTS SECTION    -->
+    <section class="projects">
+        <h2 class="projects__title">Наши проекты</h2>
+        <div class="projects-slider">
+            <div class="projects-slider__slides">
+                <div class="projects-slider__slide">
+                    <div class="slide__image">
+                        <img src="src/image/projects/sliderImg1.png" alt="Дом Уют">
+                    </div>
+                    <div class="slide-inner">
+                        <h3 class="slide-inner__title">«Дом Уют»</h3>
+                        <div class="slide-inner__description">
+                            <div class="slide-inner__description-item">
+                                <img src="src/image/projects/descImg.svg" alt="Площадь">
+                                <p>Площадь: 114 м2</p>
+                            </div>
+                            <div class="slide-inner__description-item">
+                                <img src="src/image/projects/descImg.svg" alt="Площадь">
+                                <p>Этажей: 1</p>
+                            </div>
+                            <div class="slide-inner__description-item">
+                                <img src="src/image/projects/descImg.svg" alt="Площадь">
+                                <p>Комнат: 6</p>
+                            </div>
+                            <div class="slide-inner__description-item">
+                                <img src="src/image/projects/descImg.svg" alt="Площадь">
+                                <p>Размер: 12x12</p>
+                            </div>
+                        </div>
+                        <div class="slide-inner__price">
+                            <div class="slide-inner__price-description">
+                                <p class="price-description__title">Стоимость работ</p>
+                                <h3 class="price-description__price">3 146 400 руб</h3>
+                            </div>
+                            <div class="slide-inner__price-button">
+                                <img src="src/image/projects/arrow-right.svg" alt="arrow">
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="projects-slider__item"></div>
+                <div class="projects-slider__item"></div>
+            </div>
         </div>
     </section>
 </div>
