add: swiper script

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
+    />
     <link rel="stylesheet" href="./styles/style.css">
     <title>EcoHome</title>
 </head>
@@ -161,19 +165,19 @@
                         <h3 class="slide-inner__title">«Дом Уют»</h3>
                         <div class="slide-inner__description">
                             <div class="slide-inner__description-item">
-                                <img src="src/image/projects/descImg.svg" alt="Площадь">
+                                <img src="src/image/projects/square.svg" alt="Площадь">
                                 <p>Площадь: 114 м2</p>
                             </div>
                             <div class="slide-inner__description-item">
-                                <img src="src/image/projects/descImg.svg" alt="Площадь">
+                                <img src="src/image/projects/floor.svg" alt="Площадь">
                                 <p>Этажей: 1</p>
                             </div>
                             <div class="slide-inner__description-item">
-                                <img src="src/image/projects/descImg.svg" alt="Площадь">
+                                <img src="src/image/projects/rooms.svg" alt="Площадь">
                                 <p>Комнат: 6</p>
                             </div>
                             <div class="slide-inner__description-item">
-                                <img src="src/image/projects/descImg.svg" alt="Площадь">
+                                <img src="src/image/projects/size.svg" alt="Площадь">
                                 <p>Размер: 12x12</p>
                             </div>
                         </div>
@@ -189,15 +193,86 @@
                     </div>
 
                 </div>
-                <div class="projects-slider__item"></div>
-                <div class="projects-slider__item"></div>
+                <div class="projects-slider__slide">
+                    <div class="slide__image">
+                        <img src="src/image/projects/sliderImg1.png" alt="Дом Уют">
+                    </div>
+                    <div class="slide-inner">
+                        <h3 class="slide-inner__title">«Дом Уют»</h3>
+                        <div class="slide-inner__description">
+                            <div class="slide-inner__description-item">
+                                <img src="src/image/projects/square.svg" alt="Площадь">
+                                <p>Площадь: 114 м2</p>
+                            </div>
+                            <div class="slide-inner__description-item">
+                                <img src="src/image/projects/floor.svg" alt="Площадь">
+                                <p>Этажей: 1</p>
+                            </div>
+                            <div class="slide-inner__description-item">
+                                <img src="src/image/projects/rooms.svg" alt="Площадь">
+                                <p>Комнат: 6</p>
+                            </div>
+                            <div class="slide-inner__description-item">
+                                <img src="src/image/projects/size.svg" alt="Площадь">
+                                <p>Размер: 12x12</p>
+                            </div>
+                        </div>
+                        <div class="slide-inner__price">
+                            <div class="slide-inner__price-description">
+                                <p class="price-description__title">Стоимость работ</p>
+                                <h3 class="price-description__price">3 146 400 руб</h3>
+                            </div>
+                            <div class="slide-inner__price-button">
+                                <img src="src/image/projects/arrow-right.svg" alt="arrow">
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="projects-slider__slide">
+                    <div class="slide__image">
+                        <img src="src/image/projects/sliderImg1.png" alt="Дом Уют">
+                    </div>
+                    <div class="slide-inner">
+                        <h3 class="slide-inner__title">«Дом Уют»</h3>
+                        <div class="slide-inner__description">
+                            <div class="slide-inner__description-item">
+                                <img src="src/image/projects/square.svg" alt="Площадь">
+                                <p>Площадь: 114 м2</p>
+                            </div>
+                            <div class="slide-inner__description-item">
+                                <img src="src/image/projects/floor.svg" alt="Площадь">
+                                <p>Этажей: 1</p>
+                            </div>
+                            <div class="slide-inner__description-item">
+                                <img src="src/image/projects/rooms.svg" alt="Площадь">
+                                <p>Комнат: 6</p>
+                            </div>
+                            <div class="slide-inner__description-item">
+                                <img src="src/image/projects/size.svg" alt="Площадь">
+                                <p>Размер: 12x12</p>
+                            </div>
+                        </div>
+                        <div class="slide-inner__price">
+                            <div class="slide-inner__price-description">
+                                <p class="price-description__title">Стоимость работ</p>
+                                <h3 class="price-description__price">3 146 400 руб</h3>
+                            </div>
+                            <div class="slide-inner__price-button">
+                                <img src="src/image/projects/arrow-right.svg" alt="arrow">
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
             </div>
         </div>
     </section>
 </div>
 
 
-
+<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
